GET /dir/cistomers
