# models/dir/customer.js
@@ -1,0 +1,11 @@
+const mongoose = require('mongoose');
+const Schema = mongoose.Schema;
+
+const customerSchema = new Schema({
+  name: { required: true, type: String },
+  dateCreated: { type: Date, default: Date.now },
+  dateUpdated: { type: Date, default: Date.now },
+  active: Boolean
+});
+
+module.exports = mongoose.model('Customer', customerSchema);
